Fix header size on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -175,12 +175,10 @@ header {
 }
 
 @media screen and (max-width: 700px) {
-  header {
-    
-    img {
-      display: none;
-    }
-
+  header img {
+    display: none;
+  }
+  h1 {
     --header-size: 2.25rem;
   }
 }
